// Jest Snapshot v1, https://jestjs.io/docs/snapshot-testing

exports[`drawXYArrays edge cases handles reversed region 1`] = `
{
  "imageData": Any<Object>,
  "reducedFeatures": {
    "ends": [
      50,
      100,
      150,
    ],
    "maxScores": undefined,
    "minScores": undefined,
    "scores": [
      30,
      60,
      90,
    ],
    "starts": [
      0,
      50,
      100,
    ],
  },
}
`;

exports[`drawXYArrays edge cases handles single feature 1`] = `
{
  "imageData": Any<Object>,
  "reducedFeatures": {
    "ends": [
      100,
    ],
    "maxScores": undefined,
    "minScores": undefined,
    "scores": [
      75,
    ],
    "starts": [
      50,
    ],
  },
}
`;

exports[`drawXYArrays non-pixel-dedup path (features >= 1px) renders features larger than 1px 1`] = `
{
  "imageData": Any<Object>,
  "reducedFeatures": {
    "ends": [
      100,
      200,
      300,
    ],
    "maxScores": undefined,
    "minScores": undefined,
    "scores": [
      30,
      60,
      90,
    ],
    "starts": [
      0,
      100,
      200,
    ],
  },
}
`;

exports[`drawXYArrays non-pixel-dedup path (features >= 1px) renders features with gaps using fudge factor 1`] = `
{
  "imageData": Any<Object>,
  "reducedFeatures": {
    "ends": [
      100,
      210,
      300,
    ],
    "maxScores": undefined,
    "minScores": undefined,
    "scores": [
      50,
      50,
      50,
    ],
    "starts": [
      0,
      110,
      220,
    ],
  },
}
`;

exports[`drawXYArrays pixel dedup path handles features spanning multiple pixels when first feature is sub-pixel 1`] = `
{
  "imageData": Any<Object>,
  "reducedFeatures": {
    "ends": [
      5,
      20,
      200,
    ],
    "maxScores": undefined,
    "minScores": undefined,
    "scores": [
      50,
      60,
      70,
    ],
    "starts": [
      0,
      10,
      100,
    ],
  },
}
`;

exports[`drawXYArrays pixel dedup path renders sub-pixel features that tile contiguously 1`] = `
{
  "imageData": Any<Object>,
  "reducedFeatures": {
    "ends": [
      1,
      11,
      21,
      31,
      41,
      51,
      61,
      71,
      81,
      91,
      101,
      111,
      121,
      131,
      141,
      151,
      161,
      171,
      181,
      191,
      201,
      211,
      221,
      231,
      241,
      251,
      261,
      271,
      281,
      291,
      301,
      311,
      321,
      331,
      341,
      351,
      361,
      371,
      381,
      391,
      401,
      411,
      421,
      431,
      441,
      451,
      461,
      471,
      481,
      491,
      501,
      511,
      521,
      531,
      541,
      551,
      561,
      571,
      581,
      591,
      601,
      611,
      621,
      631,
      641,
      651,
      661,
      671,
      681,
      691,
      701,
      711,
      721,
      731,
      741,
      751,
      761,
      771,
      781,
      791,
      801,
      811,
      821,
      831,
      841,
      851,
      861,
      871,
      881,
      891,
      901,
      911,
      921,
      931,
      941,
      951,
      961,
      971,
      981,
      991,
    ],
    "maxScores": undefined,
    "minScores": undefined,
    "scores": [
      50,
      50,
      50,
      50,
      50,
      50,
      50,
      50,
      50,
      50,
      50,
      50,
      50,
      50,
      50,
      50,
      50,
      50,
      50,
      50,
      50,
      50,
      50,
      50,
      50,
      50,
      50,
      50,
      50,
      50,
      50,
      50,
      50,
      50,
      50,
      50,
      50,
      50,
      50,
      50,
      50,
      50,
      50,
      50,
      50,
      50,
      50,
      50,
      50,
      50,
      50,
      50,
      50,
      50,
      50,
      50,
      50,
      50,
      50,
      50,
      50,
      50,
      50,
      50,
      50,
      50,
      50,
      50,
      50,
      50,
      50,
      50,
      50,
      50,
      50,
      50,
      50,
      50,
      50,
      50,
      50,
      50,
      50,
      50,
      50,
      50,
      50,
      50,
      50,
      50,
      50,
      50,
      50,
      50,
      50,
      50,
      50,
      50,
      50,
      50,
    ],
    "starts": [
      0,
      10,
      20,
      30,
      40,
      50,
      60,
      70,
      80,
      90,
      100,
      110,
      120,
      130,
      140,
      150,
      160,
      170,
      180,
      190,
      200,
      210,
      220,
      230,
      240,
      250,
      260,
      270,
      280,
      290,
      300,
      310,
      320,
      330,
      340,
      350,
      360,
      370,
      380,
      390,
      400,
      410,
      420,
      430,
      440,
      450,
      460,
      470,
      480,
      490,
      500,
      510,
      520,
      530,
      540,
      550,
      560,
      570,
      580,
      590,
      600,
      610,
      620,
      630,
      640,
      650,
      660,
      670,
      680,
      690,
      700,
      710,
      720,
      730,
      740,
      750,
      760,
      770,
      780,
      790,
      800,
      810,
      820,
      830,
      840,
      850,
      860,
      870,
      880,
      890,
      900,
      910,
      920,
      930,
      940,
      950,
      960,
      970,
      980,
      990,
    ],
  },
}
`;

exports[`drawXYArrays pixel dedup path renders sub-pixel features with gaps correctly 1`] = `
{
  "imageData": Any<Object>,
  "reducedFeatures": {
    "ends": [
      1,
      21,
      41,
      61,
      81,
    ],
    "maxScores": undefined,
    "minScores": undefined,
    "scores": [
      50,
      50,
      50,
      50,
      50,
    ],
    "starts": [
      0,
      20,
      40,
      60,
      80,
    ],
  },
}
`;
